Improve account creation and domain model